# openharness

./: .gitignore  README.md  install.sh  pyproject.toml
.github/actions/harness/: action.yml
.github/workflows/: ci.yml  eval.yml
bench/: run_benchmark.py  run_swebench.py
docs/: generate_screenshots.py  index.html
docs/tutorials/: 01-getting-started.html  02-sdk-basics.html  03-permissions-safety.html  04-budget-cost-controls.html  05-policy-as-code.html  06-audit-compliance.html  07-sandboxed-execution.html  08-sub-agents-parallel.html  09-cicd-pipeline.html  10-enterprise-production.html  _template.html  index.html
eval-results/: harness-bench-20260222-141054.json  harness-bench-20260222-141054.md  harness-bench-20260222-141425.json  harness-bench-20260222-141425.md  harness-bench-20260222-143334.json  harness-bench-20260222-143334.md  harness-bench-20260222-143657.json  harness-bench-20260222-143657.md  harness-bench-20260222-144243.json  harness-bench-20260222-144243.md  harness-bench-20260222-145336.json  harness-bench-20260222-145336.md  swebench-lite-claude-code-sonnet.jsonl  swebench-lite-harness-sonnet.jsonl
research/harness/: 01-landscape.md  02-architecture.md  03-harness-plan.md  04-evaluation.md  05-evaluation-deep-dive.md  06-evaluation-quick-ref.md  07-sources.md  08-eval-implementation.md  README.md
skills/commit/: SKILL.md
skills/debug/: SKILL.md
skills/review-pr/: SKILL.md
src/harness/: __init__.py
src/harness/agents/: __init__.py  manager.py  registry.py
src/harness/audit/: __init__.py  export.py  logger.py  retention.py  scanner.py
src/harness/ci/: __init__.py  config.py  github.py  reporter.py  runner.py  webhook.py
src/harness/cli/: ci_commands.py  commands.py  main.py  output.py  repl.py
src/harness/core/: config.py  context.py  engine.py  loop.py  session.py  steering.py
src/harness/eval/: __init__.py  __main__.py  harness_bench.py  metrics.py  report.py  swe_bench.py  types.py
src/harness/hooks/: __init__.py  events.py  manager.py
src/harness/mcp/: __init__.py  client.py  manager.py  tool_search.py
src/harness/memory/: __init__.py  auto.py  project.py
src/harness/observability/: __init__.py  exporters.py  metrics.py  tracing.py
src/harness/permissions/: approval.py  conditions.py  manager.py  policy.py  rules.py
src/harness/providers/: __init__.py  anthropic.py  base.py  budget.py  fallback.py  google.py  ollama.py  (+3 more)
tests/: conftest.py
tests/unit/: test_agents.py  test_audit.py  test_ci.py  test_commands.py  test_context.py  test_coverage_gaps.py  test_engine.py  test_eval.py  test_hooks.py  test_loop.py  test_mcp.py  test_memory.py  test_observability.py  test_permissions.py  test_policy.py  test_providers.py  test_router.py  test_sandbox.py  test_session.py  test_skills.py  test_tools.py  test_tools_extra.py  test_types.py  test_ui.py
(+35 files in other folders)
